bugs fix for 1st push

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ alias_en: Jiuyuan.ren
 alias_cn: 九院人导航
 # description: A Navigation Website for BYR
 keywords: 九院人导航, jiuyuan.ren, JYR, caep, Navi, Navigation
-url: http://jiuyuanren.coding.me
+url: http://jiuyuan.ren
 established_at: "2019-10-01T00:00+08:00"
 
 author: xlindo
