bugs fix for 1st push

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -80,7 +80,7 @@
     links:
     - name: 科学城阳光政务
       style: red
-      url: http://tieba.baidu.com/f?kw=%E4%B8%AD%E7%89%A9%E9%99%A2
+      url: http://kcb.caep.ac.cn
 
     - name: 贴吧-中国工程物理研究院
       icon: paw blue
