--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,6 +1,10 @@
 - categories:
   - name: 院内导航
     links:
+    - name: 微信看动态
+      style: green
+      url: https://weixin.sogou.com/weixin?type=2&s_from=input&query=%E4%B8%AD%E5%9B%BD%E5%B7%A5%E7%A8%8B%E7%89%A9%E7%90%86%E7%A0%94%E7%A9%B6%E9%99%A2&ie=utf8&_sug_=y&_sug_type_=&w=01019900&sut=72438&sst0=1567631203073&lkt=0%2C0%2C0
+      
     - name: 中物院主页
       style: basic
       url: http://www.caep.ac.cn/
