--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,10 +1,6 @@
 - categories:
   - name: 院内导航
-    links:
-    - name: 微信看动态
-      style: green
-      url: https://weixin.sogou.com/weixin?type=2&s_from=input&query=%E4%B8%AD%E5%9B%BD%E5%B7%A5%E7%A8%8B%E7%89%A9%E7%90%86%E7%A0%94%E7%A9%B6%E9%99%A2&ie=utf8&_sug_=y&_sug_type_=&w=01019900&sut=72438&sst0=1567631203073&lkt=0%2C0%2C0
-      
+    links:      
     - name: 中物院主页
       style: basic
       url: http://www.caep.ac.cn/
@@ -80,7 +76,7 @@
       style: basic
       url: http://www.nsfc.gov.cn/
 
-  - name: 本地生活
+  - name: 生活服务
     links:
     - name: 科学城阳光政务
       style: red
@@ -148,10 +144,43 @@
       style: basic
       url: http://www.mydcis.net/
 
+  - name: 九院资讯
+    links:
+    - name: 中国工程物理研究院
+      icon: weixin green
+      style: basic
+      url: https://weixin.sogou.com/weixin?type=2&s_from=input&query=%E4%B8%AD%E5%9B%BD%E5%B7%A5%E7%A8%8B%E7%89%A9%E7%90%86%E7%A0%94%E7%A9%B6%E9%99%A2&ie=utf8&_sug_=y&_sug_type_=&w=01019900&sut=72438&sst0=1567631203073&lkt=0%2C0%2C0
+
+    - name: 中物院
+      icon: weixin green
+      style: basic
+      url: https://weixin.sogou.com/weixin?type=2&query=%E4%B8%AD%E7%89%A9%E9%99%A2&ie=utf8&s_from=input&_sug_=n&_sug_type_=&w=01019900&sut=1396&sst0=1567669936209&lkt=1%2C1567669936083%2C1567669936083
+    
+    - name: 中国工程物理研究院
+      icon: weibo red
+      style: basic
+      url: https://s.weibo.com/weibo/%E4%B8%AD%E5%9B%BD%E5%B7%A5%E7%A8%8B%E7%89%A9%E7%90%86%E7%A0%94%E7%A9%B6%E9%99%A2
+
+    - name: 中物院
+      icon: weibo red
+      style: basic
+      url: https://s.weibo.com/weibo/%E4%B8%AD%E7%89%A9%E9%99%A2
+
+    - name: 核武老人魏世杰
+      icon: weibo red
+      style: basic
+      url: https://www.weibo.com/u/2281878665
+
+    - name: 九院人导航
+      icon: weibo 
+      style: red
+      url: https://www.weibo.com/u/7300265356
+
     - name: 绵阳九院人
       icon: weibo red
       style: basic
       url: https://weibo.com/jiuyuanren
+
 
 - categories:
   - name: 购物
