bugs fix for 1st push

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -190,8 +190,8 @@
       url: https://weibo.com/jiuyuanren
 
     - name: 九院人导航-反馈
-      icon: paper plane red
-      style: gray
+      icon: paper plane
+      style: blue
       url: https://wj.qq.com/s2/4452257/6ece/
 
 
