--- a/_data/links.yml
+++ b/_data/links.yml
@@ -148,7 +148,7 @@
     - name: 我院28项科技成果亮相第七届科博会
       icon: bullhorn 
       style: red
-      url: https://mp.weixin.qq.com/s?src=11&timestamp=1567762625&ver=1836&signature=iv5bHFcscFJK-jJkI2DTvCPx6YFRkVYq0sJBhId7rnyQKiuL5DOljOdkD0ELxNfsw*pGahnNvOLccbq4BPFEF8b8saMl2pQC*fbQoaq0GmOhYepuQVZawO9tHbdurdxK&new=1
+      url: http://jiuyuan.ren
 
     - name: 第七届科博会 2019年9月5日~8日
       icon: bullhorn 
@@ -197,6 +197,260 @@
 
 
 - categories:
+
+  - name: 工具
+    links:
+    - name: caep邮箱
+      icon: envelope blue
+      style: basic
+      url: http://mail.caep.cn/
+
+    - name: 网易邮箱
+      icon: envelope red
+      style: basic
+      url: http://email.163.com/
+
+    - name: QQ邮箱
+      icon: mail orange
+      style: basic
+      url: https://mail.qq.com/
+
+    - name: Gmail
+      icon: google red
+      style: basic
+      url: https://mail.google.com/
+
+    - name: '12306'
+      icon: train red
+      style: basic
+      url: http://www.12306.cn/
+
+    - name: 快递查询
+      icon: truck olive
+      style: basic
+      url: http://www.kuaidi100.com/
+
+    - name: 大众点评
+      icon: utensils orange
+      style: basic
+      url: http://www.dianping.com/
+      
+    - name: 谷歌翻译
+      icon: language blue
+      style: basic
+      url: https://translate.google.cn/
+
+    - name: 百度翻译
+      icon: paw blue
+      style: basic
+      url: https://fanyi.baidu.com/
+
+    - name: 维基百科
+      icon: wikipedia w black
+      style: basic
+      url: https://www.wikipedia.org/
+
+    - name: 彩云天气
+      icon: cloud olive
+      style: basic
+      url: http://caiyunapp.com/map
+
+    - name: 天眼查
+      style: basic
+      url: https://www.tianyancha.com/
+
+  - name: 学习
+    links:
+    - name: 谷歌学术
+      icon: graduation cap red
+      style: basic
+      url: https://scholar.google.cn
+
+    - name: Sci-Hub
+      style: basic
+      url: https://sci-hub.tw/
+
+    - name: 百度学术
+      icon: graduation cap blue
+      style: basic
+      url: https://xueshu.baidu.com
+
+    - name: 小木虫
+      style: basic
+      url: http://muchong.com/bbs/
+
+    - name: 经管之家
+      style: basic
+      url: https://bbs.pinggu.org/
+
+    - name: 知网
+      style: basic
+      url: https://www.cnki.net/
+
+    - name: 万方
+      style: basic
+      url: http://www.wanfangdata.com.cn
+
+    - name: Stack Overflow
+      icon: stack overflow orange
+      style: basic
+      url: https://stackoverflow.com/
+
+    - name: CSDN
+      style: basic
+      url: https://edu.csdn.net/
+      
+    - name: Coursera
+      style: basic
+      url: https://www.coursera.org/
+
+    - name: MOOC
+      style: basic
+      url: http://mooc.org/
+
+    - name: 网易公开课
+      style: basic
+      url: http://open.163.com/
+
+    - name: W3School
+      style: basic
+      url: http://www.w3school.com.cn/
+
+    - name: SegmentFault
+      style: basic
+      url: http://segmentfault.com/
+
+    - name: Tutorials Point
+      style: basic
+      url: https://www.tutorialspoint.com/
+
+    - name: Google Open Source
+      icon: code blue
+      style: basic
+      url: https://opensource.google.com/
+
+  - name: 社交
+    links:
+    - name: 微博
+      icon: weibo red
+      style: basic
+      url: https://weibo.com/
+
+    - name: 微信网页版
+      icon: weixin green
+      style: basic
+      url: https://wx.qq.com/
+
+    - name: 百度贴吧
+      icon: paw blue
+      style: basic
+      url: https://tieba.baidu.com/
+
+    - name: 知乎
+      icon: zhihu blue
+      style: basic
+      url: https://www.zhihu.com/
+
+    - name: Quora
+      icon: quora red
+      style: basic
+      url: https://www.quora.com/
+
+    - name: GitHub
+      icon: github black
+      style: basic
+      url: https://github.com/
+
+    - name: Facebook
+      icon: facebook f blue
+      style: basic
+      url: https://www.facebook.com/
+
+    - name: Google+
+      icon: google plus g red
+      style: basic
+      url: https://plus.google.com/
+
+    - name: Tumblr
+      icon: tumblr blue
+      style: basic
+      url: https://www.tumblr.com/
+
+    - name: Instagram
+      icon: instagram pink
+      style: basic
+      url: https://www.instagram.com/
+
+    - name: LinkedIn
+      icon: linkedin blue
+      style: basic
+      url: https://www.linkedin.com/
+
+  - name: 娱乐
+    links:
+    - name: 优酷
+      style: basic blue
+      icon: video
+      url: https://youku.com/
+
+    - name: 爱奇艺
+      style: green
+      icon: video
+      url: https://iqiyi.com/
+
+    - name: 芒果
+      style: yellow
+      icon: video
+      url: http://mgtv.com/
+
+    - name: 腾讯视频
+      style: basic
+      icon: video
+      url: https://v.qq.com/
+
+    - name: 哔哩哔哩
+      style: pink
+      icon: video
+      url: https://bilibili.com/
+
+    - name: 腾讯动漫
+      style: basic
+      url: https://ac.qq.com/
+
+    - name: 虾米
+      style: orange
+      url: https://xiami.com/
+
+    - name: 豆瓣电影
+      icon: film blue
+      style: basic
+      url: https://movie.douban.com/
+
+    - name: Youtube
+      icon: youtube red
+      style: basic
+      url: https://youtube.com/
+
+    - name: FIX
+      style: yellow
+      url: http://www.zimuxia.cn/%E6%88%91%E4%BB%AC%E7%9A%84%E4%BD%9C%E5%93%81
+
+    - name: 人人
+      style: basic
+      url: http://www.yyetss.com/
+
+    - name: 猪猪
+      style: basic
+      url: http://www.zzrbl.com/
+
+    - name: 幻樱
+      style: basic
+      url: http://www.hysub.net/
+
+    - name: 斗鱼
+      style: orange
+      url: https://douyu.com/
+
   - name: 购物
     links:    
     - name: 天猫
@@ -265,226 +519,3 @@
     - name: 有品
       style: basic
       url: https://www.xiaomiyoupin.com/
-
-  - name: 工具
-    links:
-    - name: caep邮箱
-      icon: envelope blue
-      style: basic
-      url: http://mail.caep.cn/
-
-    - name: 网易邮箱
-      icon: envelope red
-      style: basic
-      url: http://email.163.com/
-
-    - name: QQ邮箱
-      icon: mail orange
-      style: basic
-      url: https://mail.qq.com/
-
-    - name: Gmail
-      icon: google red
-      style: basic
-      url: https://mail.google.com/
-
-    - name: '12306'
-      icon: train red
-      style: basic
-      url: http://www.12306.cn/
-
-    - name: 快递查询
-      icon: truck olive
-      style: basic
-      url: http://www.kuaidi100.com/
-
-    - name: 大众点评
-      icon: utensils orange
-      style: basic
-      url: http://www.dianping.com/
-      
-    - name: 谷歌翻译
-      icon: language blue
-      style: basic
-      url: https://translate.google.cn/
-
-    - name: 百度翻译
-      icon: paw blue
-      style: basic
-      url: https://fanyi.baidu.com/
-
-    - name: 维基百科
-      icon: wikipedia w black
-      style: basic
-      url: https://www.wikipedia.org/
-
-    - name: 彩云天气
-      icon: cloud olive
-      style: basic
-      url: http://caiyunapp.com/map
-
-    - name: 天眼查
-      style: basic
-      url: https://www.tianyancha.com/
-
-  - name: 社交
-    links:
-    - name: 微博
-      icon: weibo red
-      style: basic
-      url: https://weibo.com/
-
-    - name: 微信网页版
-      icon: weixin green
-      style: basic
-      url: https://wx.qq.com/
-
-    - name: 百度贴吧
-      icon: paw blue
-      style: basic
-      url: https://tieba.baidu.com/
-
-    - name: 知乎
-      icon: zhihu blue
-      style: basic
-      url: https://www.zhihu.com/
-
-    - name: Quora
-      icon: quora red
-      style: basic
-      url: https://www.quora.com/
-
-    - name: GitHub
-      icon: github black
-      style: basic
-      url: https://github.com/
-
-    - name: Facebook
-      icon: facebook f blue
-      style: basic
-      url: https://www.facebook.com/
-
-    - name: Google+
-      icon: google plus g red
-      style: basic
-      url: https://plus.google.com/
-
-    - name: Tumblr
-      icon: tumblr blue
-      style: basic
-      url: https://www.tumblr.com/
-
-    - name: Instagram
-      icon: instagram pink
-      style: basic
-      url: https://www.instagram.com/
-
-    - name: LinkedIn
-      icon: linkedin blue
-      style: basic
-      url: https://www.linkedin.com/
-
-  - name: 学习
-    links:
-    - name: Coursera
-      style: basic
-      url: https://www.coursera.org/
-
-    - name: MOOC
-      style: basic
-      url: http://mooc.org/
-
-    - name: 网易公开课
-      style: basic
-      url: http://open.163.com/
-
-    - name: W3School
-      style: basic
-      url: http://www.w3school.com.cn/
-
-    - name: Stack Overflow
-      icon: stack overflow orange
-      style: basic
-      url: https://stackoverflow.com/
-
-    - name: SegmentFault
-      style: basic
-      url: http://segmentfault.com/
-
-    - name: Tutorials Point
-      style: basic
-      url: https://www.tutorialspoint.com/
-
-    - name: Google Open Source
-      icon: code blue
-      style: basic
-      url: https://opensource.google.com/
-
-    - name: CSDN
-      style: basic
-      url: https://edu.csdn.net/
-
-  - name: 娱乐
-    links:
-    - name: 优酷
-      style: basic blue
-      icon: video
-      url: https://youku.com/
-
-    - name: 爱奇艺
-      style: green
-      icon: video
-      url: https://iqiyi.com/
-
-    - name: 芒果
-      style: yellow
-      icon: video
-      url: http://mgtv.com/
-
-    - name: 腾讯视频
-      style: basic
-      icon: video
-      url: https://v.qq.com/
-
-    - name: 哔哩哔哩
-      style: pink
-      icon: video
-      url: https://bilibili.com/
-
-    - name: 腾讯动漫
-      style: basic
-      url: https://ac.qq.com/
-
-    - name: 虾米
-      style: orange
-      url: https://xiami.com/
-
-    - name: 豆瓣电影
-      icon: film blue
-      style: basic
-      url: https://movie.douban.com/
-
-    - name: Youtube
-      icon: youtube red
-      style: basic
-      url: https://youtube.com/
-
-    - name: FIX
-      style: yellow
-      url: http://www.zimuxia.cn/%E6%88%91%E4%BB%AC%E7%9A%84%E4%BD%9C%E5%93%81
-
-    - name: 人人
-      style: basic
-      url: http://www.yyetss.com/
-
-    - name: 猪猪
-      style: basic
-      url: http://www.zzrbl.com/
-
-    - name: 幻樱
-      style: basic
-      url: http://www.hysub.net/
-
-    - name: 斗鱼
-      style: orange
-      url: https://douyu.com/
