bugs fix for 1st push

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -145,7 +145,7 @@
   - name: 九院资讯
     links:
 
-    - name: 2020届招聘进行时
+    - name: 校招信息
       icon: bullhorn 
       style: yellow
       url: http://zpxx.caep.cn/
